src/objects/DW_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DW Orders</relationshipLabel>
        <relationshipName>DW_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DW_Account__c</fullName>
        <label>DW Account</label>
        <referenceTo>DW_Account__c</referenceTo>
        <relationshipLabel>DW Orders</relationshipLabel>
        <relationshipName>DW_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Executed_When__c</fullName>
        <defaultValue>&quot;Not Executed&quot;</defaultValue>
        <label>Executed When</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expires_Time_Stamp__c</fullName>
        <label>Expires Time Stamp</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_ID__c</fullName>
        <label>Instrument ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Name__c</fullName>
        <label>Instrument Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Symbol__c</fullName>
        <label>Instrument Symbol</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <description>&quot;0&quot; - New, &quot;1&quot; - Partial Fill, &quot;2&quot; - Fill, &quot;4&quot; - Canceled, &quot;8&quot; - Rejected.</description>
        <inlineHelpText>&quot;0&quot; - New, &quot;1&quot; - Partial Fill, &quot;2&quot; - Fill, &quot;4&quot; - Canceled, &quot;8&quot; - Rejected.</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Fill</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Partial Fill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Market Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Side__c</fullName>
        <label>Side</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buy</fullName>
                </value>
                <value>
                    <fullName>Sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DW Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>DW Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DW Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>